docs: add overview and instruction in readme